// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DID document workflow \`CheqdDIDDocument\` 1`] = `
{
  "alsoKnownAs": [],
  "assertionMethod": [],
  "authentication": [],
  "capabilityDelegation": [],
  "capabilityInvocation": [],
  "context": [
    "https://www.w3.org/ns/did/v1",
  ],
  "controller": [],
  "id": "did:cheqd:testnet:6ec66297-f55e-4744-b8cd-bd043bc45767",
  "keyAgreement": [],
  "service": [],
  "verificationMethod": [],
  "versionId": "0557d7da-8dea-45cb-8f30-7370b59eab71",
}
`;

exports[`DID document workflow \`CheqdDIDDocument\` 2`] = `
{
  "alsoKnownAs": [],
  "assertionMethod": [
    "did:cheqd:testnet:f1749383-d9dd-479f-82aa-e52fe8f59c54#keys-1",
    "did:cheqd:testnet:f1749383-d9dd-479f-82aa-e52fe8f59c54#keys-2",
  ],
  "authentication": [
    "did:cheqd:testnet:f1749383-d9dd-479f-82aa-e52fe8f59c54#keys-1",
  ],
  "capabilityDelegation": [],
  "capabilityInvocation": [
    "did:cheqd:testnet:f1749383-d9dd-479f-82aa-e52fe8f59c54#keys-1",
  ],
  "context": [
    "https://www.w3.org/ns/did/v1",
  ],
  "controller": [
    "did:cheqd:testnet:f1749383-d9dd-479f-82aa-e52fe8f59c54",
  ],
  "id": "did:cheqd:testnet:f1749383-d9dd-479f-82aa-e52fe8f59c54",
  "keyAgreement": [],
  "service": [],
  "verificationMethod": [
    {
      "controller": "did:cheqd:testnet:f1749383-d9dd-479f-82aa-e52fe8f59c54",
      "id": "did:cheqd:testnet:f1749383-d9dd-479f-82aa-e52fe8f59c54#keys-1",
      "verificationMaterial": "Bt5Mafvpcqou1pBF8SnW1BJMvpkSzZnPEgWunTUFwHZm",
      "verificationMethodType": "Ed25519VerificationKey2018",
    },
    {
      "controller": "did:cheqd:testnet:f1749383-d9dd-479f-82aa-e52fe8f59c54",
      "id": "did:cheqd:testnet:f1749383-d9dd-479f-82aa-e52fe8f59c54#keys-2",
      "verificationMaterial": "11111111111111111111111111111111",
      "verificationMethodType": "Ed25519VerificationKey2018",
    },
  ],
  "versionId": "28edc043-872b-4ab7-9cb8-b01d1bd677c5",
}
`;

exports[`DID document workflow \`CheqdDIDDocument\` 3`] = `
{
  "alsoKnownAs": [],
  "assertionMethod": [
    "did:cheqd:testnet:f1749383-d9dd-479f-82aa-e52fe8f59c54#keys-2",
    "did:cheqd:testnet:f1749383-d9dd-479f-82aa-e52fe8f59c54#keys-3",
    "did:cheqd:testnet:f1749383-d9dd-479f-82aa-e52fe8f59c54#keys-5",
    "did:cheqd:testnet:f1749383-d9dd-479f-82aa-e52fe8f59c54#keys-6",
    "did:cheqd:testnet:f1749383-d9dd-479f-82aa-e52fe8f59c54#keys-8",
    "did:cheqd:testnet:f1749383-d9dd-479f-82aa-e52fe8f59c54#keys-9",
    "did:cheqd:testnet:f1749383-d9dd-479f-82aa-e52fe8f59c54#keys-11",
    "did:cheqd:testnet:f1749383-d9dd-479f-82aa-e52fe8f59c54#keys-12",
  ],
  "authentication": [
    "did:cheqd:testnet:f1749383-d9dd-479f-82aa-e52fe8f59c54#keys-1",
    "did:cheqd:testnet:f1749383-d9dd-479f-82aa-e52fe8f59c54#keys-6",
    "did:cheqd:testnet:f1749383-d9dd-479f-82aa-e52fe8f59c54#keys-7",
    "did:cheqd:testnet:f1749383-d9dd-479f-82aa-e52fe8f59c54#keys-9",
  ],
  "capabilityDelegation": [],
  "capabilityInvocation": [
    "did:cheqd:testnet:f1749383-d9dd-479f-82aa-e52fe8f59c54#keys-4",
    "did:cheqd:testnet:f1749383-d9dd-479f-82aa-e52fe8f59c54#keys-7",
    "did:cheqd:testnet:f1749383-d9dd-479f-82aa-e52fe8f59c54#keys-8",
    "did:cheqd:testnet:f1749383-d9dd-479f-82aa-e52fe8f59c54#keys-9",
  ],
  "context": [
    "https://www.w3.org/ns/did/v1",
  ],
  "controller": [
    "did:cheqd:mainnet:f1749383-d9dd-479f-82aa-e52fe8f59c54",
    "did:cheqd:testnet:df3ba823-c1e2-46e0-bb54-056f9c506e90",
  ],
  "id": "did:cheqd:testnet:f1749383-d9dd-479f-82aa-e52fe8f59c54",
  "keyAgreement": [
    "did:cheqd:testnet:f1749383-d9dd-479f-82aa-e52fe8f59c54#keys-10",
  ],
  "service": [],
  "verificationMethod": [
    {
      "controller": "did:cheqd:testnet:f1749383-d9dd-479f-82aa-e52fe8f59c54",
      "id": "did:cheqd:testnet:f1749383-d9dd-479f-82aa-e52fe8f59c54#keys-1",
      "verificationMaterial": "Bt5Mafvpcqou1pBF8SnW1BJMvpkSzZnPEgWunTUFwHZm",
      "verificationMethodType": "Ed25519VerificationKey2018",
    },
    {
      "controller": "did:cheqd:testnet:f1749383-d9dd-479f-82aa-e52fe8f59c54",
      "id": "did:cheqd:testnet:f1749383-d9dd-479f-82aa-e52fe8f59c54#keys-2",
      "verificationMaterial": "11111111111111111111111111111111",
      "verificationMethodType": "Ed25519VerificationKey2018",
    },
    {
      "controller": "did:cheqd:testnet:f1749383-d9dd-479f-82aa-e52fe8f59c54",
      "id": "did:cheqd:testnet:f1749383-d9dd-479f-82aa-e52fe8f59c54#keys-3",
      "verificationMaterial": "GxmaKA52SZGQtZS3Usa6Az48gky2AZRKzRKxsXM6ystc",
      "verificationMethodType": "Ed25519VerificationKey2018",
    },
    {
      "controller": "did:cheqd:testnet:f1749383-d9dd-479f-82aa-e52fe8f59c54",
      "id": "did:cheqd:testnet:f1749383-d9dd-479f-82aa-e52fe8f59c54#keys-4",
      "verificationMaterial": "5FBSa4xAs54osiMs75JcepL695v1XhccQmQePBZQaad9",
      "verificationMethodType": "Ed25519VerificationKey2018",
    },
    {
      "controller": "did:cheqd:testnet:f1749383-d9dd-479f-82aa-e52fe8f59c54",
      "id": "did:cheqd:testnet:f1749383-d9dd-479f-82aa-e52fe8f59c54#keys-5",
      "verificationMaterial": "11111111111111111111111111111111",
      "verificationMethodType": "Ed25519VerificationKey2018",
    },
    {
      "controller": "did:cheqd:testnet:f1749383-d9dd-479f-82aa-e52fe8f59c54",
      "id": "did:cheqd:testnet:f1749383-d9dd-479f-82aa-e52fe8f59c54#keys-6",
      "verificationMaterial": "EaNp37NGpe8KViTKxAdknyvUP44doH1fHnFpYqEcfUjE",
      "verificationMethodType": "Ed25519VerificationKey2018",
    },
    {
      "controller": "did:cheqd:testnet:f1749383-d9dd-479f-82aa-e52fe8f59c54",
      "id": "did:cheqd:testnet:f1749383-d9dd-479f-82aa-e52fe8f59c54#keys-7",
      "verificationMaterial": "A462rFkYENhY6kf9zLVPg6qvtQhXJ6RuL8CNdHTWzNqa",
      "verificationMethodType": "Ed25519VerificationKey2018",
    },
    {
      "controller": "did:cheqd:testnet:f1749383-d9dd-479f-82aa-e52fe8f59c54",
      "id": "did:cheqd:testnet:f1749383-d9dd-479f-82aa-e52fe8f59c54#keys-8",
      "verificationMaterial": "Amb3kf4if5Av1sz6UdYtEw2iy6DzufRAtch6hiXEWHcw",
      "verificationMethodType": "Ed25519VerificationKey2018",
    },
    {
      "controller": "did:cheqd:testnet:f1749383-d9dd-479f-82aa-e52fe8f59c54",
      "id": "did:cheqd:testnet:f1749383-d9dd-479f-82aa-e52fe8f59c54#keys-9",
      "verificationMaterial": "FwUvnTThdnNPv23Rbq2SXtxxYAT21Atvdd1cZBHPYue4",
      "verificationMethodType": "Ed25519VerificationKey2018",
    },
    {
      "controller": "did:cheqd:testnet:f1749383-d9dd-479f-82aa-e52fe8f59c54",
      "id": "did:cheqd:testnet:f1749383-d9dd-479f-82aa-e52fe8f59c54#keys-10",
      "verificationMaterial": "BaGbEav6KzvWhgBWPyZK2vWX5EDDFc4a8rfUwAZ3x8Jn",
      "verificationMethodType": "Ed25519VerificationKey2018",
    },
    {
      "controller": "did:cheqd:testnet:f1749383-d9dd-479f-82aa-e52fe8f59c54",
      "id": "did:cheqd:testnet:f1749383-d9dd-479f-82aa-e52fe8f59c54#keys-11",
      "verificationMaterial": "11111111111111111111111111111111",
      "verificationMethodType": "Ed25519VerificationKey2018",
    },
    {
      "controller": "did:cheqd:testnet:f1749383-d9dd-479f-82aa-e52fe8f59c54",
      "id": "did:cheqd:testnet:f1749383-d9dd-479f-82aa-e52fe8f59c54#keys-12",
      "verificationMaterial": "11111111111111111111111111111111",
      "verificationMethodType": "Ed25519VerificationKey2018",
    },
  ],
  "versionId": "47b4d97b-1ebe-4d81-a3ed-12eb63baaeb9",
}
`;

exports[`DID document workflow \`DIDDocument.from\` works 1`] = `
{
  "@context": [
    "test",
  ],
  "alsoKnownAs": null,
  "assertionMethod": null,
  "authentication": null,
  "capabilityDelegation": null,
  "capabilityInvocation": null,
  "controller": [
    "did:dock:5DEHasvC9G3eVF3qCsN2VQvEbHYdQtsv74ozZ1ngQQj39Luk",
  ],
  "https://rdf.dock.io/alpha/2021#attestsDocumentContents": null,
  "id": "did:dock:5DEHasvC9G3eVF3qCsN2VQvEbHYdQtsv74ozZ1ngQQj39Luk",
  "keyAgreement": null,
  "service": null,
  "verificationMethod": [
    {
      "controller": "did:dock:5DEHasvC9G3eVF3qCsN2VQvEbHYdQtsv74ozZ1ngQQj39Luk",
      "id": "did:dock:5DEHasvC9G3eVF3qCsN2VQvEbHYdQtsv74ozZ1ngQQj39Luk#keys-3",
      "publicKeyBase58": "EaNp37NGpe8KViTKxAdknyvUP44doH1fHnFpYqEcfUjE",
      "type": "Ed25519VerificationKey2018",
    },
  ],
}
`;

exports[`DID document workflow \`DIDDocument\` 1`] = `
{
  "@context": [
    "https://www.w3.org/ns/did/v1",
  ],
  "alsoKnownAs": [],
  "assertionMethod": [],
  "authentication": [],
  "capabilityDelegation": [],
  "capabilityInvocation": [],
  "controller": [],
  "https://rdf.dock.io/alpha/2021#attestsDocumentContents": null,
  "id": "did:dock:5DEHasvC9G3eVF3qCsN2VQvEbHYdQtsv74ozZ1ngQQj39Luk",
  "keyAgreement": [],
  "service": [],
  "verificationMethod": [],
}
`;

exports[`DID document workflow \`DIDDocument\` 2`] = `
{
  "@context": [
    "https://www.w3.org/ns/did/v1",
  ],
  "alsoKnownAs": [],
  "assertionMethod": [
    "did:dock:5DEHasvC9G3eVF3qCsN2VQvEbHYdQtsv74ozZ1ngQQj39Luk#keys-2",
    "did:dock:5DEHasvC9G3eVF3qCsN2VQvEbHYdQtsv74ozZ1ngQQj39Luk#keys-3",
    "did:dock:5DEHasvC9G3eVF3qCsN2VQvEbHYdQtsv74ozZ1ngQQj39Luk#keys-5",
    "did:dock:5DEHasvC9G3eVF3qCsN2VQvEbHYdQtsv74ozZ1ngQQj39Luk#keys-6",
    "did:dock:5DEHasvC9G3eVF3qCsN2VQvEbHYdQtsv74ozZ1ngQQj39Luk#keys-8",
    "did:dock:5DEHasvC9G3eVF3qCsN2VQvEbHYdQtsv74ozZ1ngQQj39Luk#keys-9",
    "did:dock:5DEHasvC9G3eVF3qCsN2VQvEbHYdQtsv74ozZ1ngQQj39Luk#keys-11",
    "did:dock:5DEHasvC9G3eVF3qCsN2VQvEbHYdQtsv74ozZ1ngQQj39Luk#keys-12",
  ],
  "authentication": [
    "did:dock:5DEHasvC9G3eVF3qCsN2VQvEbHYdQtsv74ozZ1ngQQj39Luk#keys-1",
    "did:dock:5DEHasvC9G3eVF3qCsN2VQvEbHYdQtsv74ozZ1ngQQj39Luk#keys-6",
    "did:dock:5DEHasvC9G3eVF3qCsN2VQvEbHYdQtsv74ozZ1ngQQj39Luk#keys-7",
    "did:dock:5DEHasvC9G3eVF3qCsN2VQvEbHYdQtsv74ozZ1ngQQj39Luk#keys-9",
  ],
  "capabilityDelegation": [],
  "capabilityInvocation": [
    "did:dock:5DEHasvC9G3eVF3qCsN2VQvEbHYdQtsv74ozZ1ngQQj39Luk#keys-4",
    "did:dock:5DEHasvC9G3eVF3qCsN2VQvEbHYdQtsv74ozZ1ngQQj39Luk#keys-7",
    "did:dock:5DEHasvC9G3eVF3qCsN2VQvEbHYdQtsv74ozZ1ngQQj39Luk#keys-8",
    "did:dock:5DEHasvC9G3eVF3qCsN2VQvEbHYdQtsv74ozZ1ngQQj39Luk#keys-9",
  ],
  "controller": [
    "did:key:z6MktvqCyLxTsXUH1tUZncNdVeEZ7hNh7npPRbUU27GTrYb8",
    "did:dock:5DEHasvC9G3eVF3qCsN2VQvEbHYdQtsv74ozZ1ngQQj39Luk",
  ],
  "https://rdf.dock.io/alpha/2021#attestsDocumentContents": null,
  "id": "did:dock:5DEHasvC9G3eVF3qCsN2VQvEbHYdQtsv74ozZ1ngQQj39Luk",
  "keyAgreement": [
    "did:dock:5DEHasvC9G3eVF3qCsN2VQvEbHYdQtsv74ozZ1ngQQj39Luk#keys-10",
  ],
  "service": [],
  "verificationMethod": [
    {
      "controller": "did:dock:5DEHasvC9G3eVF3qCsN2VQvEbHYdQtsv74ozZ1ngQQj39Luk",
      "id": "did:dock:5DEHasvC9G3eVF3qCsN2VQvEbHYdQtsv74ozZ1ngQQj39Luk#keys-1",
      "publicKeyBase58": "Bt5Mafvpcqou1pBF8SnW1BJMvpkSzZnPEgWunTUFwHZm",
      "type": "Ed25519VerificationKey2018",
    },
    {
      "controller": "did:dock:5DEHasvC9G3eVF3qCsN2VQvEbHYdQtsv74ozZ1ngQQj39Luk",
      "id": "did:dock:5DEHasvC9G3eVF3qCsN2VQvEbHYdQtsv74ozZ1ngQQj39Luk#keys-2",
      "publicKeyBase58": "CeEf4Q1kvLo66eSbTSujuasf2mv1rTQEpK8rnuyqMxpP",
      "type": "Bls12381BBSVerificationKeyDock2023",
    },
    {
      "controller": "did:dock:5DEHasvC9G3eVF3qCsN2VQvEbHYdQtsv74ozZ1ngQQj39Luk",
      "id": "did:dock:5DEHasvC9G3eVF3qCsN2VQvEbHYdQtsv74ozZ1ngQQj39Luk#keys-3",
      "publicKeyBase58": "GxmaKA52SZGQtZS3Usa6Az48gky2AZRKzRKxsXM6ystc",
      "type": "Ed25519VerificationKey2018",
    },
    {
      "controller": "did:dock:5DEHasvC9G3eVF3qCsN2VQvEbHYdQtsv74ozZ1ngQQj39Luk",
      "id": "did:dock:5DEHasvC9G3eVF3qCsN2VQvEbHYdQtsv74ozZ1ngQQj39Luk#keys-4",
      "publicKeyBase58": "5FBSa4xAs54osiMs75JcepL695v1XhccQmQePBZQaad9",
      "type": "Ed25519VerificationKey2018",
    },
    {
      "controller": "did:dock:5DEHasvC9G3eVF3qCsN2VQvEbHYdQtsv74ozZ1ngQQj39Luk",
      "id": "did:dock:5DEHasvC9G3eVF3qCsN2VQvEbHYdQtsv74ozZ1ngQQj39Luk#keys-5",
      "publicKeyBase58": "9y4gScRXDQJahd1gKbf1pYf9mwcRKnUqzstR3Bn7ydYz",
      "type": "Bls12381BBSVerificationKeyDock2023",
    },
    {
      "controller": "did:dock:5DEHasvC9G3eVF3qCsN2VQvEbHYdQtsv74ozZ1ngQQj39Luk",
      "id": "did:dock:5DEHasvC9G3eVF3qCsN2VQvEbHYdQtsv74ozZ1ngQQj39Luk#keys-6",
      "publicKeyBase58": "EaNp37NGpe8KViTKxAdknyvUP44doH1fHnFpYqEcfUjE",
      "type": "Ed25519VerificationKey2018",
    },
    {
      "controller": "did:dock:5DEHasvC9G3eVF3qCsN2VQvEbHYdQtsv74ozZ1ngQQj39Luk",
      "id": "did:dock:5DEHasvC9G3eVF3qCsN2VQvEbHYdQtsv74ozZ1ngQQj39Luk#keys-7",
      "publicKeyBase58": "A462rFkYENhY6kf9zLVPg6qvtQhXJ6RuL8CNdHTWzNqa",
      "type": "Ed25519VerificationKey2018",
    },
    {
      "controller": "did:dock:5DEHasvC9G3eVF3qCsN2VQvEbHYdQtsv74ozZ1ngQQj39Luk",
      "id": "did:dock:5DEHasvC9G3eVF3qCsN2VQvEbHYdQtsv74ozZ1ngQQj39Luk#keys-8",
      "publicKeyBase58": "Amb3kf4if5Av1sz6UdYtEw2iy6DzufRAtch6hiXEWHcw",
      "type": "Ed25519VerificationKey2018",
    },
    {
      "controller": "did:dock:5DEHasvC9G3eVF3qCsN2VQvEbHYdQtsv74ozZ1ngQQj39Luk",
      "id": "did:dock:5DEHasvC9G3eVF3qCsN2VQvEbHYdQtsv74ozZ1ngQQj39Luk#keys-9",
      "publicKeyBase58": "FwUvnTThdnNPv23Rbq2SXtxxYAT21Atvdd1cZBHPYue4",
      "type": "Ed25519VerificationKey2018",
    },
    {
      "controller": "did:dock:5DEHasvC9G3eVF3qCsN2VQvEbHYdQtsv74ozZ1ngQQj39Luk",
      "id": "did:dock:5DEHasvC9G3eVF3qCsN2VQvEbHYdQtsv74ozZ1ngQQj39Luk#keys-10",
      "publicKeyBase58": "BaGbEav6KzvWhgBWPyZK2vWX5EDDFc4a8rfUwAZ3x8Jn",
      "type": "Ed25519VerificationKey2018",
    },
    {
      "controller": "did:dock:5DEHasvC9G3eVF3qCsN2VQvEbHYdQtsv74ozZ1ngQQj39Luk",
      "id": "did:dock:5DEHasvC9G3eVF3qCsN2VQvEbHYdQtsv74ozZ1ngQQj39Luk#keys-11",
      "publicKeyBase58": "BBF5rtFSaWt4s4PxMEswkothcPJNLhdsQpggZyUozSdZ",
      "type": "Bls12381BBSVerificationKeyDock2023",
    },
    {
      "controller": "did:dock:5DEHasvC9G3eVF3qCsN2VQvEbHYdQtsv74ozZ1ngQQj39Luk",
      "id": "did:dock:5DEHasvC9G3eVF3qCsN2VQvEbHYdQtsv74ozZ1ngQQj39Luk#keys-12",
      "publicKeyBase58": "EaNp37NGpe8KViTKxAdknyvUP44doH1fHnFpYqEcfUjE",
      "type": "Bls12381BBSVerificationKeyDock2023",
    },
  ],
}
`;

exports[`DID document workflow \`DIDDocument\` 3`] = `
{
  "@context": [
    "overriden",
  ],
  "alsoKnownAs": [],
  "assertionMethod": [],
  "authentication": [],
  "capabilityDelegation": [],
  "capabilityInvocation": [],
  "controller": [],
  "https://rdf.dock.io/alpha/2021#attestsDocumentContents": null,
  "id": "did:dock:5DEHasvC9G3eVF3qCsN2VQvEbHYdQtsv74ozZ1ngQQj39Luk",
  "keyAgreement": [],
  "service": [],
  "verificationMethod": [],
}
`;
